inline the user_idx, think is slightly faster

--- a/python_optimization/python_optimization.ipynb
+++ b/python_optimization/python_optimization.ipynb
@@ -1029,11 +1029,10 @@
     "            if bitset[idx] != 0:\n",
     "                for pos in range(64):\n",
     "                    if (bitset[idx] & (np.int64(1) << np.int64(pos))) != 0:\n",
-    "                        user_idx = idx * 64 + pos\n",
     "                        score_for_qs = 0.0\n",
     "                        for q in qs_combinations[i]:\n",
-    "                            score_for_qs += score_matrix[user_idx, q]\n",
-    "                        score_for_user = grand_totals[user_idx]\n",
+    "                            score_for_qs += score_matrix[idx * 64 + pos, q]\n",
+    "                        score_for_user = grand_totals[idx * 64 + pos]\n",
     "                        n += 1.0\n",
     "                        sum_a += score_for_qs\n",
     "                        sum_b += score_for_user\n",
