put readme content into nb too

--- a/python_optimization/python_optimization.ipynb
+++ b/python_optimization/python_optimization.ipynb
@@ -4,16 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notes:\n",
-    "- line_profiler is used for relative speeds of lines, but slows down the overall execution, that's why iteration speed is measured separately\n",
+    "# To run the benchmark\n",
     "\n",
+    "- First generate `data-large.json`, as described in the project root README.md\n",
+    "    - Move this to `python_optimization/data/large.json`\n",
+    "- Then `cd python_optimization`\n",
+    "- `poetry install`\n",
+    "- `make run_benchmark`\n",
     "\n",
-    "- TODO: improve var names, e.g. \"numba\" for numba, etc.\n",
-    "- TODO: add markdown notes and include them in the report. i.e. generate a markdown report that can paste into blog. (need to be able to run in command line because faster than jupyter)\n",
-    "\n",
-    "\n",
-    "Idea:\n",
-    "- maybe faster to pass in questions and users seperately, rather than scores matrix, which is large... idk"
+    "Note the benchmark should be converted to a Python script before running, which gives better performance than when it's in a Jupyter Notebook.\n"
    ]
   },
   {
